<resources>
    <string name="app_name" translatable="false">RediPuntos</string>
    <string name="signUpTermsText">Al presionar \'Crear Cuenta\' aceptas los Términos y Condiciones y las Políticas de
        Privacidad.
    </string>
    <string name="walk1">¡Explota tus puntos!</string>
    <string name="walk2">Fácil y Segura</string>
    <string name="walk3">Explora tus posibilidades con RediPuntos</string>
    <string name="walk4">¿Y por qué no?</string>
    <string name="description1">Viví una experiencia innovadora de redención de puntos</string>
    <string name="description2">Utiliza tus puntos en lo que más necesites de la manera más fácil y segura</string>
    <string name="description3">Sabemos que la manera convencional no es la mejor. Creemos que podemos mejorarla,
        facilitando tu vida mediante una plataforma innovadora, fácil y segura
    </string>
    <string name="description4">Proba RediPuntos para pagar tus servicios porque, ¿por que no?</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="barcodeinfo">Por favor enfoque en el recuadro el código de barras \n ubicado en la parte posterior de
        su cédula de identidad
    </string>
    <string name="title_activity_add_payment">AddPaymentActivity</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="verify_walk_title1">Permítenos conocerte</string>
    <string name="verify_walk_descrip1">Para poder tener acceso a todos nuestros beneficios debes de verificar tu
        identidad y de
        este modo garantizarle la seguridad e integridad a nuestra comunidad.
    </string>
    <string name="verify_walk_title2">¿Cómo lo hacemos?</string>
    <string name="verify_walk_descrip2">Mediante tecnología de punta, un selfie y las fotos de tu identificación,
        RediPuntos logra verificar
        con exactitud si eres la persona quien dices ser sin hacerte salir de tu casa.
    </string>
    <string name="verify_walk_title3">Ve donde haya luz</string>
    <string name="verify_walk_descrip3">Para que una verificación sea exitosa, es vital que tus fotos sean lo
        suficientemente legíbles, por lo que
        tómate tu tiempo y asegúraate de tener una iluminación adecuada.
    </string>
    <string name="verify_walk_title4">Capturamos la foto automaticamente</string>
    <string name="verify_walk_descrip4">RediPuntos detecta automaticamente tu identificación y tu cara para capturar la
        mejor foto posible. ¡Tan solo acércate a los márgenes!
    </string>
    <string name="verify_walk_title5">Confía en nosotros</string>
    <string name="verify_walk_descrip5">RediPuntos cumple con todos los estándares de seguridad por lo que damos fe de
        que tu información será manejada con total discreción y de la manera más responsable.
    </string>
    <string name="About_app_name">Sobre %1$s</string>
    <string name="About_zimplifica">Sobre Zimplifica</string>
    <string name="Accept">Aceptar</string>
    <string name="Account">Cuenta</string>
    <string name="Account_information">Información de la Cuenta</string>
    <string name="Add">Agregar</string>
    <string name="Add_description" >Agregar descripción</string>
    <string name="Add_email" >Agregar correo</string>
    <string name="Add_payment_method" >Agregar método de pago</string>
    <string name="Add_payment_method_securiy_description" >%1$s cumple con todos los protocolos de seguridad establecidos para administrar de forma segura la información de sus tarjetas de crédito/débito</string>
    <string name="Add_phone_number" >Agregar teléfono</string>
    <string name="Alert" >Alerta</string>
    <string name="App_copyright" >© %1$s %2$d</string>
    <string name="App_version">Versión %1$s</string>
    <string name="Apply" >Aplicar</string>
    <string name="Apply_any">Aplicar %1$s</string>
    <string name="Back" >Volver</string>
    <string name="Biometric_auth_activation_message" >¿Deseas utilizar autenticación biométrica en vez de tú código PIN?</string>
    <string name="Biometric_authentication" >Autenticación Biométrica</string>
    <string name="Birthdate" >Fecha de Nacimiento</string>
    <string name="Call" >Llamar</string>
    <string name="Call_to">Llamar: %1$s</string>
    <string name="Camera_not_allowed" >Cámara no disponible</string>
    <string name="Cancel" >Cancelar</string>
    <string name="Card_amex_security_code_placeholder" >1234</string>
    <string name="Card_amex_security_code_title" >CID</string>
    <string name="Card_charge" >Cargo a la Tarjeta</string>
    <string name="Card_expiration_date_error" >Ingrese una fecha válida</string>
    <string name="Card_expiration_date_format" >MM/AA</string>
    <string name="Card_expiration_date_title" >Fecha de venc.</string>
    <string name="Card_mask" >●●●●</string>
    <string name="Card_name_title" >Nombre en Tarjeta</string>
    <string name="Card_number_title" >Número de tarjeta</string>
    <string name="Card_number_error" >Ingrese un número de tarjeta válido</string>
    <string name="Card_security_code_placeholder" >123</string>
    <string name="Card_security_code_title" >CVV</string>
    <string name="Cashback" >Reembolso</string>
    <string name="Categories" >Categorías</string>
    <string name="Challenges" >Desafíos</string>
    <string name="Change" >Cambiar</string>
    <string name="Change_password" >Cambiar Contraseña</string>
    <string name="Change_password_confirmation" >¿Estás seguro que deseas cambiar tu contraseña? Un código de confirmación será enviado a tu número de teléfono.</string>
    <string name="Change_password_message">Contraseña cambiada correctamente</string>
    <string name="Check_out_my_app" >He estado utilizando %1$s para pagar en todos los comercios y pienso que te gustará esta aplicación. Obten ₡%2$s de descuento</string>
    <string name="Close" >Cerrar</string>
    <string name="Closed" >Cerrado</string>
    <string name="Closed_now" >Cerrado ahora</string>
    <string name="Closing_soon" >Cierra pronto</string>
    <string name="Commerce_base_restriction" >El descuento aplica únicamente en este comercio</string>
    <string name="Commerce_base_waysToUse" >El descuento aplica únicamente al pagar con %1$s</string>
    <string name="Commerces" >Comercios</string>
    <string name="Complete_information" >Completar Información</string>
    <string name="Complete_personal_information" >Completar Información Personal</string>
    <string name="Complete_personal_information_message" >%1$s requiere saber un poco mas de ti, ¿deseas completar tu información?</string>
    <string name="Contact_information_verified" >Información de contacto verificada correctamente.</string>
    <string name="Contacts" >Contactos</string>
    <string name="Continue" >Continuar</string>
    <string name="Copy_code_link_below" >Pulsa para copiar tu código personal:</string>
    <string name="Current_level" >Nivel Actual</string>
    <string name="Current_level_description" >Tu nivel actual es %1$s. Acumula puntos para llegar al siguiente nivel.</string>
    <string name="Current_password" >Contraseña Actual</string>
    <string name="Delete" >Eliminar</string>
    <string name="Delete_payment_method_message" >¿Deseas realmente eliminar este método de pago?</string>
    <string name="Delete_payment_method_sucess" >Método de pago eliminado correctamente.</string>
    <string name="Description" >Descripción</string>
    <string name="Detail" >Detalle</string>
    <string name="Diamond" >Diamante</string>
    <string name="Discount" >Descuento</string>
    <string name="Dismiss" >Omitir</string>
    <string name="Email" >Correo Electrónico</string>
    <string name="Email_example" >usuario@ejemplo.com</string>
    <string name="Email_verification_successful">Correo electrónico confirmado correctamente.</string>
    <string name="Enable_premium" >Activar Premium</string>
    <string name="Enable_premium_description" >Un único pago de %1$s</string>
    <string name="Error_add_address" >Ocurrió un error al guardar la dirección. Por favor intente de nuevo.</string>
    <string name="Error_add_favorite" >Ocurrió un error al agregar el favorito. Por favor intente de nuevo.</string>
    <string name="Error_add_gender" >Ocurrió un error al guardar el género. Por favor intente de nuevo.</string>
    <string name="Error_add_payment_method" >Ocurrió un error al guardar el método de pago. Por favor intente de nuevo.</string>
    <string name="Error_add_payment_method_first" >Por favor primero agregué un medio de pago.</string>
    <string name="Error_camera_not_allowed" >%1$s no tiene permiso para usar la cámara, por favor cambiar los ajustes de privacidad</string>
    <string name="Error_card_invalid_expiration_date" >Ingrese una fecha válida</string>
    <string name="Error_card_invalid_number" >Ingrese un número de tarjeta válido</string>
    <string name="Error_confirm_email" >Ocurrió un problema al confirmar el correo. Por favor intente de nuevo.</string>
    <string name="Error_create_pin" >Ocurrió un error al crear el PIN. Por favor intenta de nuevo.</string>
    <string name="Error_delete_payment_method" >Ocurrió un error al eliminar el medio de pago. Por favor intenta de nuevo.</string>
    <string name="Error_fetch_commerces" >Ocurrió un error al obtener los comercios. Por favor intenta de nuevo.</string>
    <string name="Error_fetch_payments" >Ocurrió un error al obtener los movimientos. Por favor intenta de nuevo.</string>
    <string name="Error_finishing_verification" >No terminaste la verificación correctamente</string>
    <string name="Error_forgot_password" >Ocurrió un error al tratarde confirmar la contraseña. Por favor asegurate de que el código de verificación sea el correcto e intenta de nuevo.</string>
    <string name="Error_invalid_credentials" >Las credenciales son inválidas</string>
    <string name="Error_max_attempts_reached" >Has excedido el número de intentos, por favor intenta dentro de unos minutos</string>
    <string name="Error_network_connection" >Ocurrió un error de conexión. Por favor compruebe la conexión a internet e intente de nuevo.</string>
    <string name="Error_processing_payment" >Ocurrió un error al procesar el pago. Por favor intente de nuevo.</string>
    <string name="Get_email_description" >%1$s require tu correo electrónico para enviarte información como facturas electrónicas y verificaciones de seguridad</string>
    <string name="Movements" >Historial</string>
    <string name="Name" >Nombre</string>
    <string name="Next" >Siguiente</string>
    <string name="Pay" >Pagar</string>
    <string name="Phone_placeholder" >8888-8888</string>
    <string name="Pin_create" >Crear PIN</string>
    <string name="Pin_description" >El PIN debe estar formado por 4 números</string>
    <string name="Pin_placeholder" >* * * *</string>
    <string name="Pin_update" >Actualizar PIN</string>
    <string name="Sign_up_add_name" >Por favor ingresa tu nombre seguido de tu teléfono móvil</string>
    <string name="Verification_code_placeholder" >######</string>
    <string name="Verification_code_sent_to_number" >Un código de 6 dígitos fue enviado al número %1$s</string>
    <string name="Verify" >Verificar</string>
</resources>