<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.activities.UpdatePinActivity">

    <TextView
            android:textColor="@android:color/white"
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Pin_update"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:id="@+id/update_pin_phone"
            android:textAlignment="center"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Verification_code_sent_to_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
            android:textColor="@android:color/white"
            android:hint="@string/Verification_code_placeholder"
            android:textColorHint="@android:color/white"
            android:textAlignment="center"
            android:background="@drawable/border_white"
            android:layout_marginTop="30dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:id="@+id/update_pin_phone_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_pin_phone" />

    <TextView
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:id="@+id/textView57"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pin_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_pin_phone_code" />

    <EditText
            android:textColor="@android:color/white"
            android:hint="@string/Pin_placeholder"
            android:textColorHint="@android:color/white"
            android:textAlignment="center"
            android:background="@drawable/border_white"
            android:layout_marginTop="30dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:id="@+id/update_pin_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView57" />

    <ProgressBar
            android:layout_marginTop="10dp"
            android:id="@+id/update_pin_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_pin_field" />

    <Button
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:enabled="false"
            android:background="@drawable/btn_state"
            android:id="@+id/update_pin_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_pin_progress_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>