<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.activities.TakePhoneActivity">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:background="@drawable/code_input_border"
            android:hint="@string/Name"
            android:ems="10"
            android:id="@+id/nickname_editText" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/take_phone_title" android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="50dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:id="@+id/take_phone_title"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="50dp"
            android:text="@string/Sign_up_add_name"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_marginStart="50dp"
                  android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="50dp"
                  android:id="@+id/linearLayout5"
                  android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/nickname_editText">
        <TextView android:layout_width="0dp"
                  android:text="+506"
                  android:textColor="@android:color/black"
                  android:textSize="18sp"
                  android:background="@drawable/number_form"
                  android:layout_weight="0.2"
                  android:paddingStart="10dp"
                  android:paddingTop="10dp"
                  android:paddingBottom="10dp"
                  android:layout_height="wrap_content"/>

        <EditText android:layout_width="0dp"
                  android:id="@+id/phone_edit_text"
                  android:paddingStart="10dp"
                  android:maxLength="8"
                  android:paddingTop="10dp"
                  android:inputType="numberSigned"
                  android:paddingBottom="10dp"
                  android:textSize="18sp"
                  android:hint="@string/Phone_placeholder"
                  android:layout_marginStart="1dp"
                  android:background="@drawable/number_form_2"
                  android:layout_weight="0.8"
                  android:layout_height="wrap_content"/>

    </LinearLayout>
    <Button
            android:enabled="false"
            android:textAllCaps="false"
            android:background="@drawable/btn_state"
            android:text="@string/Continue"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/next_take_btn" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="50dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>