<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="match_parent"
        tools:context=".ui.activities.CompleteEmailActivity">

    <TextView
            android:text="@string/Get_email_description"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:textColor="@android:color/white"
            android:textAlignment="viewStart"
            android:layout_height="wrap_content"
            android:id="@+id/textView18" android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:textColorHint="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView18" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp" android:id="@+id/textInputLayout9">

        <EditText
                android:id="@+id/complete_email_input"
                android:backgroundTint="@android:color/white"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:hint="@string/Email"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/Verify"
            android:background="@drawable/btn_state"
            android:enabled="false"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/complete_emain_btn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/progressBar7"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar7" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout9" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>